product page sort done

--- a/src/components/browse/browse-filter/browseFilter.sass
+++ b/src/components/browse/browse-filter/browseFilter.sass
@@ -1,2 +1,10 @@
 .browse-content
     .browse-filter
+        width: 15.313rem
+        height: 400px
+        flex-shrink: 0
+        background-color: green
+        position: absolute
+        right: -100%
+        @include responsive_ls
+            position: static
