--- a/src/components/layout/header/header.sass
+++ b/src/components/layout/header/header.sass
@@ -14,8 +14,10 @@ header
             @include flex($align: center)
             margin-left: 1rem
             z-index: 6
-            img
-                width: 30px
+            a
+                display: flex
+                img
+                    width: 27px
             ul
                 display: none
         .right-nav
