--- a/src/components/browse/swiper-genre/swiperGenre.sass
+++ b/src/components/browse/swiper-genre/swiperGenre.sass
@@ -1,3 +1,5 @@
+@import './swiper-genre-skeleton/swiperGenreSkeleton'
+    
 .browse-container
     .swiper-genre_container
         margin-top: 30px 
