--- a/src/view/Browse/browse.sass
+++ b/src/view/Browse/browse.sass
@@ -4,7 +4,6 @@
     
 #browse
     padding-bottom: 5.5rem
-    overflow: hidden
     .browse-container
         width: 90%
         max-width: 100rem
@@ -13,5 +12,6 @@
         @include responsive_ls
             width: 75%
         .browse-content
+            // overflow: hidden
             @include flex(row)
-            position: relative
+            // position: relative
