--- a/src/components/browse/swiper-genre/swiperGenre.sass
+++ b/src/components/browse/swiper-genre/swiperGenre.sass
@@ -62,8 +62,13 @@
                         margin-bottom: 10px
                     .swiper-genre-content_name
                         font-size: 1rem
+                        text-align: center
                         font-weight: normal
                         color: #f5f5f5
                         margin-top: .5rem
+                        text-overflow: ellipsis
+                        overflow: hidden
+                        width: 90%
+                        white-space: nowrap
                         @include responsive_lm
                             font-size: 1.375rem
