--- a/src/components/layout/main-header/mainHeader.sass
+++ b/src/components/layout/main-header/mainHeader.sass
@@ -81,7 +81,9 @@
                 top: 100%
                 padding: 27px 32px
                 width: 100%
+
                 ul
+                    z-index: 11
                     li
                         a
                             display: block
@@ -121,3 +123,12 @@
                     display: none
                 p
                     display: block
+
+.bottom-menu_black
+    width: 100%
+    height: 100%
+    background-color: rgba(18, 18, 18, 0.522)
+    position: fixed
+    left: 0
+    top: 0
+    z-index: 3
