--- a/src/components/layout/main-header/mainHeader.sass
+++ b/src/components/layout/main-header/mainHeader.sass
@@ -33,9 +33,11 @@
                     background-color: transparent
                     border: none
                     color: rgb(245, 245, 245)
+                    font-size: .9rem
                     &:focus
                         outline: none
                     &::placeholder
+                        font-size: .8rem
                         font-weight: 500
                         color: #ccccccb8
                         letter-spacing: .8px
