sign up page done

--- a/src/assets/styles/index.sass
+++ b/src/assets/styles/index.sass
@@ -17,6 +17,8 @@
 @import '../../view/Home/home'
 @import '../../view/Product/product'
 @import '../../view/Browse/browse'
+@import '../../view/Login/login'
+@import '../../view/SignUp/signUp'
 
 
 
