--- a/src/view/Main/main.sass
+++ b/src/view/Main/main.sass
@@ -1,5 +1,5 @@
 #main
-    background-color: #121212
+    background-color: $blackBG
     flex-grow: 1
     -webkit-box-flex: 1
     -webkit-flex-grow: 1
