--- a/src/components/home/swiper-category/swiperCategory.sass
+++ b/src/components/home/swiper-category/swiperCategory.sass
@@ -30,7 +30,7 @@
                     border: none
                     border-radius: 50%
                     @include size(1.875rem, 1.875rem)
-                    curosr: pointer
+                    cursor: pointer
                     &:hover
                         background-color: rgb(32, 32, 32)
                 .prev-button
